Parser appears to be actually working

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
             "email": "george@hotelling.net"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.1.0",
         "ext-xmlreader": "*"
