--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "georgeh/php-beerxml",
     "type": "library",
     "description": "BeerXML parser and generator",
+    "keywords": ["beerxml","beer","homebrew","homebrewing"],
     "homepage": "https://github.com/georgeh/php-beerxml",
     "license": "MIT",
     "authors": [
@@ -12,7 +13,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.1.0",
+        "php": ">=5.3.0",
         "ext-xmlreader": "*"
     },
     "require-dev": {
