--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "ext-xmlreader": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-0": {
