--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,8 +18,8 @@
          verbose="true">
 
     <logging>
-        <log type="testdox-text" target="php://stdout"/>
         <log type="coverage-text" target="php://stdout" showUncoveredFiles="true"/>
+        <log type="coverage-clover" target="build/logs/clover.xml"/>
     </logging>
 
     <testsuites>
