--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
             "email": "george@hotelling.net"
         }
     ],
+    "support": {
+        "issues": "https://github.com/georgeh/php-beerxml/issues",
+    },
     "require": {
         "php": ">=5.3.0",
         "ext-xmlreader": "*"
